<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShowViewModel"
            />
        
        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />

    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddingShoeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Shoe_Name"
                        android:layout_marginTop="10dp"
                        android:textAlignment="center"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/Shoe_Size"
                        android:textAlignment="center"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/Shoe_Company"
                        android:textAlignment="center"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/Shoe_Description"
                        android:textAlignment="center"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/Shoe_Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Shoe_Name"
                        android:text="@={viewModel.shoeName}"
                        android:textAlignment="center"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/Shoe_Size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Shoe_Size"
                        android:text="@={viewModel.shoeSize}"
                        android:textAlignment="center"
                        android:textSize="20dp"  />

                    <EditText
                        android:id="@+id/shoe_Company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Shoe_Company"
                        android:text="@={viewModel.shoeCompany}"
                        android:textAlignment="center"
                        android:textSize="20dp"  />

                    <EditText
                        android:id="@+id/Shoe_Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                       android:hint="@string/Shoe_Description"
                        android:text="@={viewModel.shoeDescription}"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/Adding_Shoe_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp" />
        </LinearLayout>

    </FrameLayout>


</layout>